# PTOAS

./: .gitignore  AGENTS.md  CMakeLists.txt  _ptoas_build_backend.py  build.sh  ptoas-device-79d830..ll  pyproject.toml  quick_install.sh  run.sh  set_ptoas_env.sh  sinkhorn_bwd_hs8.ll
lib/PTO/Transforms/: CMakeLists.txt  ExpandTileOp.cpp  FoldTileBufIntrinsics.cpp  HIVMIntrinsicNaming.cpp  InferPTOLayout.cpp  MemrefToTileBuf.cpp  PTOInferVPTOVecScope.cpp  PTOInstantiateAndInlineOpLib.cpp  PTOLowerFrontendPipeOpsPass.cpp  PTOMaterializeTileHandles.cpp  PTONormalizeUncoveredTileSections.cpp  PTOPlanMemory.cpp  PTOPlanMemory.h  PTOResolveReservedBuffersPass.cpp  PTOToEmitC.cpp  PTOToVPTO.cpp  PTOToVPTOLowering.cpp  PTOVPTOExpandBridgeOps.cpp  PTOVPTOPtrBoundary.cpp  PTOValidateVPTOIR.cpp  PTOViewToMemref.cpp  Utils.cpp  VPTOExpandWrapperOps.cpp  VPTOLLVMEmitter.cpp  VPTOLLVMEmitterHelper.cpp  VPTOLLVMEmitterLegacy.cpp  VPTOPtrNormalize.cpp  VPTOSplitCVModule.cpp  VPTOTextEmitter.cpp
lib/PTO/Transforms/GraphSyncSolver/: MemInfo.cpp
lib/PTO/Transforms/InsertSync/: InsertSyncAnalysis.cpp  MemoryDependentAnalyzer.cpp  PTOIRTranslator.cpp  PTOInsertSync.cpp  SyncMacroModel.cpp
lib/PTO/Transforms/TileFusion/: FusionAnalysis.cpp  PTOLowLevelLoopFusion.cpp  PTOOpScheduling.cpp
test/tilelang_st/npu/a5/src/st/testcase/: CMakeLists.txt  run_ptoas_to_file.cmake
test/tilelang_st/npu/a5/src/st/testcase/softmax/: softmax.pto
test/tilelang_st/npu/a5/src/st/testcase/softmax_tadds_mix/: CMakeLists.txt  softmax_tadds_mix.pto
test/tilelang_st/npu/a5/src/st/testcase/tabs/: cases.py  launch.cpp  main.cpp  tabs.pto
test/tilelang_st/npu/a5/src/st/testcase/tadd/: cases.py  compare.py  gen_data.py  launch.cpp  main.cpp  tadd.pto
test/tilelang_st/npu/a5/src/st/testcase/tadds/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tadds.pto
test/tilelang_st/npu/a5/src/st/testcase/tand/: cases.py  gen_data.py  launch.cpp  main.cpp  tand.pto
test/tilelang_st/npu/a5/src/st/testcase/tands/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tands.pto
test/tilelang_st/npu/a5/src/st/testcase/tci/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tci.pto
test/tilelang_st/npu/a5/src/st/testcase/tcmp/: cases.py  compare.py  gen_data.py  launch.cpp  main.cpp  tcmp.pto
test/tilelang_st/npu/a5/src/st/testcase/tcmps/: CMakeLists.txt  cases.py  compare.py  gen_data.py  launch.cpp  main.cpp  tcmps.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolargmax/: tcolargmax.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolargmin/: tcolargmin.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpand/: CMakeLists.txt  compare.py  launch.cpp  main.cpp  tcolexpand.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpandadd/: launch.cpp  main.cpp  tcolexpandadd.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpanddiv/: cases.py  launch.cpp  main.cpp  tcolexpanddiv.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpandexpdif/: launch.cpp  main.cpp  tcolexpandexpdif.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpandmax/: CMakeLists.txt  gen_data.py  launch.cpp  main.cpp  tcolexpandmax.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpandmin/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tcolexpandmin.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpandmul/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tcolexpandmul.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolexpandsub/: CMakeLists.txt  launch.cpp  main.cpp  tcolexpandsub.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolmax/: cases.py  gen_data.py  tcolmax.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolmin/: tcolmin.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolprod/: CMakeLists.txt  cases.py  compare.py  gen_data.py  launch.cpp  main.cpp  tcolprod.pto
test/tilelang_st/npu/a5/src/st/testcase/tcolsum/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tcolsum.pto
test/tilelang_st/npu/a5/src/st/testcase/tconcat/: CMakeLists.txt  cases.py  compare.py  gen_data.py  launch.cpp  main.cpp  tconcat.pto
test/tilelang_st/npu/a5/src/st/testcase/tcvt/: cases.py  compare.py  gen_cpp.py  gen_data.py  gen_tcvt_pto.py  launch.cpp  main.cpp  tcvt.pto
test/tilelang_st/npu/a5/src/st/testcase/tdiv/: cases.py  compare.py  gen_data.py  launch.cpp  main.cpp  tdiv.pto
test/tilelang_st/npu/a5/src/st/testcase/tdivs/: CMakeLists.txt  cases.py  gen_data.py  launch.cpp  main.cpp  tdivs.pto
tilelang-dsl/: CMakeLists.txt  README.md
tilelang-dsl/docs/: README.md  matcher-and-advanced-surface-migration.md  tilelang-dsl-guide.md  unsupported-features.md  v1-lowering.md  v1-surface.md
tilelang-dsl/docs/user_guide/: 01-introduction.md  03-kernel-declaration.md  04-template-kernels.md  05-type-system.md  06-control-flow.md  07-frontend-operations.md  08-control-flow.md  08-sync-dma-operations.md  09-frontend-operations.md  09-vector-memory-operations.md  10-predicate-operations.md  10-sync-dma-operations.md  11-vector-arithmetic-operations.md  11-vector-memory-operations.md  12-cube-operations.md  12-predicate-operations.md  13-vector-arithmetic-operations.md  14-examples.md  16-compatibility-notes.md
tilelang-dsl/docs/vpto_spec/: vpto-spec-current.md  vpto-spec-v0.2.md  vpto-spec-v0.3.md
tilelang-dsl/examples/: README.md  v1_elementwise_tail_demo.py  v1_emit_mlir_demo.py  v1_tadd_implicit_vecscope_demo.py  v1_tbinop_2d_nopostupdate_demo.py  v1_verify_smoke.py
tilelang-dsl/python/tilelang_dsl/: __init__.py  backend_validator.py  daemon_core.py  env_config.py  expand_helper.py  frontend_ast.py  kernel.py  lowering.py  lowering_backend.py  pybind_renderer.py  semantic.py  stable_key.py  support_matrix.py  types.py
tilelang-dsl/skills/auto-update-vpto-spec/: SKILL.md
tilelang-dsl/tests/: import_tilelang_dsl.py  simple_verify.py  test_low_precision_dtypes.py  test_stable_key.py  test_stable_key_simple.py  test_tilelang_dsl_v1.py  verify_issue_237.py
tilelang-dsl/tests/backend/: __init__.py  test_backend_validator.py  test_e2e_pybind_backend.py  test_lowering_backend.py
(+3262 files in other folders)
